Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "    pass\n",
     "\n",
     "def find_term_derivative (term):\n",
-    "    return (find_term_derivative [1] * (find_term_derivative[0]**(find_term_derivative[1]-1)))\n",
+    "    return (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
     "\n"
    ]
