--- a/index.ipynb
+++ b/index.ipynb
@@ -76,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-df1a480c6259>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-df1a480c6259>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def find_term_derivative(term):\n",
     "    pass\n",
