--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,8 @@
    "outputs": [],
    "source": [
     "two_x_squared = (2, 2)\n",
-    "find_term_derivative(two_x_squared) # (4, 1)"
+    "find_term_derivative(two_x_squared) # (4, 1)\n",
+    "\n"
    ]
   },
   {
