--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
    "source": [
     "two_x_squared = (2, 2)\n",
     "find_term_derivative(two_x_squared) # (4, 1)\n",
-    "\n"
+    "\n",
+    "def "
    ]
   },
   {
