--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,8 @@
     "two_x_squared = (2, 2)\n",
     "find_term_derivative(two_x_squared) # (4, 1)\n",
     "\n",
-    "def find_term_derivative"
+    "def find_term_derivative (term):\n",
+    "    "
    ]
   },
   {
