--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
     "find_term_derivative(two_x_squared) # (4, 1)\n",
     "\n",
     "def find_term_derivative (term):\n",
-    "    return find_term_derivative[1] * (find_term_derivative[0] * x)^(find_term_derivative[1]-1)"
+    "    return find_term_derivative[1] * (find_term_derivative[0] * x)**(find_term_derivative[1]-1)"
    ]
   },
   {
