Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,9 +93,9 @@
     "    pass\n",
     "\n",
     "def find_term_derivative (term):\n",
-    "    return (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
+    "    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
-    "\n"
+    "pip install simpy\n"
    ]
   },
   {
