--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-df1a480c6259>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-4-8766d5caf862>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-df1a480c6259>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8766d5caf862>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
