Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-8766d5caf862>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-5-30a59928c2b0>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8766d5caf862>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-30a59928c2b0>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "def find_term_derivative (term):\n",
     "    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
-    "pip install simpy\n"
+    "pip install sympy\n"
    ]
   },
   {
