Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-30a59928c2b0>, line 5)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-6-e992e1406a99>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-30a59928c2b0>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e992e1406a99>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install sympy\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
     "    pass\n",
     "\n",
     "def find_term_derivative (term):\n",
-    "    pass (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
+    "    # (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
     "pip install sympy\n"
    ]
