Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-e992e1406a99>, line 7)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-cdd9eb19a455>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e992e1406a99>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install sympy\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-cdd9eb19a455>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install sympy\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     "def find_term_derivative(term):\n",
     "    pass\n",
     "\n",
-    "def find_term_derivative (term):\n",
+    "# find_term_derivative (term):\n",
     "    # (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
     "pip install sympy\n"
