Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,15 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-cdd9eb19a455>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-8-ffa3c6d86197>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-cdd9eb19a455>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install sympy\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-ffa3c6d86197>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install_sympy\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     "# find_term_derivative (term):\n",
     "    # (find_term_derivative [1] * x **(find_term_derivative[1]-1)))\n",
     "\n",
-    "pip install sympy\n"
+    "pip install_sympy\n"
    ]
   },
   {
