Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,8 +89,8 @@
     }
    ],
    "source": [
-    "def find_term_derivative(typle):\n",
-    "    pass\n",
+    "def find_term_derivative(tuple):\n",
+    "    return \n",
     "\n",
     "\n"
    ]
