--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "def find_term_derivative(tuple):\n",
-    "    return \n",
+    "    return find_term_derivative[]\n",
     "\n",
     "\n"
    ]
