Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "def find_term_derivative(tuple):\n",
-    "    return find_term_derivative[1]*\n",
+    "    return find_term_derivative[1]*find_term_derivative[0]\n",
     "\n",
     "\n"
    ]
