--- a/index.ipynb
+++ b/index.ipynb
@@ -76,21 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-ffa3c6d86197>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-ffa3c6d86197>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pip install_sympy\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_term_derivative(tuple):\n",
-    "    return find_term_derivative[1]*find_term_derivative[0]**find_term_derivative[1]\n",
+    "    return find_term_derivative[1]*find_term_derivative[0]**find_term_derivative[1]-1\n",
     "\n",
     "\n"
    ]
