--- a/index.ipynb
+++ b/index.ipynb
@@ -81,8 +81,8 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    constant = find_term_derivative[1]\n",
-    "\n",
+    "    constant = find_term_derivative[1]*find_term_derivative[0]\n",
+    "    exponent \n",
     "\n"
    ]
   },
