--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    constant = find_term_derivative[1]*find_term_derivative[0]\n",
-    "    exponent \n",
+    "    exponent = find_term_derivative[1]-1\n",
+    "    re\n",
     "\n"
    ]
   },
