--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
     "def find_term_derivative(term):\n",
     "    constant = find_term_derivative[1]*find_term_derivative[0]\n",
     "    exponent = find_term_derivative[1]-1\n",
-    "    return \n",
+    "    return (constant, ex)\n",
     "\n"
    ]
   },
