--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "def find_term_derivative(term):\n",
     "    constant = find_term_derivative[1]*find_term_derivative[0]\n",
     "    exponent = find_term_derivative[1]-1\n",
-    "    return (constant, ex)\n",
+    "    return (constant, exponent)\n",
     "\n"
    ]
   },
