--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    constant = find_term_derivative[1]*find_term_derivative[0]\n",
+    "    constant = term[1]*term[0]\n",
     "    exponent = find_term_derivative[1]-1\n",
     "    return (constant, exponent)\n",
     "\n"
