Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "# find_term_derivative (term):\n",
     "  #  return find_term_derivative[1] * (find_term_derivative[0] * x)**(find_term_derivative[1]-1)\n",
     "    \n",
-    "\n"
+    "def \n"
    ]
   },
   {
