--- a/index.ipynb
+++ b/index.ipynb
@@ -137,8 +137,8 @@
     "# find_term_derivative (term):\n",
     "  #  return find_term_derivative[1] * (find_term_derivative[0] * x)**(find_term_derivative[1]-1)\n",
     "    \n",
-    "def find_term_derivative(two_x_square):\n",
-    "    constant = \n"
+    "def find_term_derivative(two_x_squared):\n",
+    "    constant = two_x_square\n"
    ]
   },
   {
