--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
     "  #  return find_term_derivative[1] * (find_term_derivative[0] * x)**(find_term_derivative[1]-1)\n",
     "    \n",
     "def find_term_derivative(two_x_squared):\n",
-    "    constant = two_x_squared[1]*two_x_squared[0]\n"
+    "    constant = two_x_squared[1]*two_x_squared[0]\n",
+    "    exponent = two_x_squared\n"
    ]
   },
   {
