--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,8 @@
     "    \n",
     "def find_term_derivative(two_x_squared):\n",
     "    constant = two_x_squared[1]*two_x_squared[0]\n",
-    "    exponent = two_x_squared\n"
+    "    exponent = two_x_squared[1]-1\n",
+    "    return \n"
    ]
   },
   {
