--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
     "def find_term_derivative(two_x_squared):\n",
     "    constant = two_x_squared[1]*two_x_squared[0]\n",
     "    exponent = two_x_squared[1]-1\n",
-    "    return \n"
+    "    return (cont)\n"
    ]
   },
   {
