--- a/index.ipynb
+++ b/index.ipynb
@@ -116,20 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 1)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "two_x_squared = (2, 2)\n",
     "find_term_derivative(two_x_squared) # (4, 1)\n",
@@ -140,7 +129,7 @@
     "def find_term_derivative(two_x_squared):\n",
     "    constant = two_x_squared[1]*two_x_squared[0]\n",
     "    exponent = two_x_squared[1]-1\n",
-    "    return (cont)\n"
+    "    return (constant,exponent)\n"
    ]
   },
   {
