--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,8 @@
     "def find_term_derivative(two_x_squared):\n",
     "    constant = two_x_squared[1]*two_x_squared[0]\n",
     "    exponent = two_x_squared[1]-1\n",
-    "    return (constant,exponent)\n"
+    "    return (constant,exponent)\n",
+    "\n"
    ]
   },
   {
