Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,9 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "two_x_squared = (2, 2)\n",
     "find_term_derivative(two_x_squared) # (4, 1)\n",
@@ -130,7 +141,8 @@
     "    constant = two_x_squared[1]*two_x_squared[0]\n",
     "    exponent = two_x_squared[1]-1\n",
     "    return (constant,exponent)\n",
-    "\n"
+    "\n",
+    "find_term_derivative(two_x_squared)"
    ]
   },
   {
