Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "four\n",
+    "four_x_cubed\n",
     "def find_derivative(function_terms):\n",
     "    "
    ]
