--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "four_x_cubed_minus_three_x = (4,3)\n",
+    "four_x_cubed_minus_three_x = [(4,3),\n",
     "def find_derivative(function_terms):\n",
     "    "
    ]
