--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "four_x_cubed_minus_three_x = [(4,3),(3,1)]\n",
     "def find_derivative(function_terms):\n",
-    "    constant = funtion_terms[]\n",
+    "    constant = funtion_terms[1]*funtion_terms[0]\n",
     "    "
    ]
   },
