--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     "four_x_cubed_minus_three_x = [(4,3),(3,1)]\n",
     "def find_derivative(function_terms):\n",
     "    constant = funtion_terms[1]*funtion_terms[0]\n",
-    "    "
+    "    exonent = funtion_terms"
    ]
   },
   {
