Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
     "def find_derivative(function_terms):\n",
     "    constant = funtion_terms[1]*funtion_terms[0]\n",
     "    exonent = funtion_terms[1]-1\n",
-    "    return "
+    "    return ()"
    ]
   },
   {
