--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "\n",
     "def find_derivative(function_terms):\n",
-    "    constant_term1 = funtion_terms[1]*funtion_terms[0]\n",
+    "    constant_term1 = funtion_terms[0][1]*funtion_terms[0]\n",
     "    exonent = funtion_terms[1]-1\n",
     "    return [(contstant,exponent),(constant,exponent)]\n"
    ]
