--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,8 @@
     "\n",
     "def find_derivative(function_terms):\n",
     "    constant_term1 = funtion_terms[0][1]*funtion_terms[0][0]\n",
-    "    exonent_term1 = funtion_terms[1]-1\n",
+    "    exonent_term1 = funtion_terms[0][1]-1\n",
+    "    \n",
     "    return [(contstant,exponent),(constant,exponent)]\n"
    ]
   },
