Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,8 @@
     "def find_derivative(function_terms):\n",
     "    constant_term1 = funtion_terms[0][1]*funtion_terms[0][0]\n",
     "    exonent_term1 = funtion_terms[0][1]-1\n",
-    "    \n",
+    "    constant_term2 = funtion_terms[0][1]*funtion_terms[0][0]\n",
+    "    exonent_term2 = funtion_terms[0][1]-1\n",
     "    return [(contstant,exponent),(constant,exponent)]\n"
    ]
   },
