Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,17 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-27-c8f0278257a3>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-c8f0278257a3>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return [(contstant,exponent),(constant,exponent)]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
     "def find_derivative(function_terms):\n",
     "    constant_term1 = funtion_terms[0][1]*funtion_terms[0][0]\n",
     "    exonent_term1 = funtion_terms[0][1]-1\n",
-    "    constant_term2 = funtion_terms[0][1]*funtion_terms[0][0]\n",
-    "    exonent_term2 = funtion_terms[0][1]-1\n",
+    "    constant_term2 = funtion_terms[1][1]*funtion_terms[1][0]\n",
+    "    exonent_term2 = funtion_terms[1[1]-1\n",
     "    return [(contstant,exponent),(constant,exponent)]\n"
    ]
   },
