Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
     "    exonent_term1 = funtion_terms[0][1]-1\n",
     "    constant_term2 = funtion_terms[1][1]*funtion_terms[1][0]\n",
     "    exonent_term2 = funtion_terms[1[1]-1\n",
-    "    return (contstant,exponent),(constant,exponent)\n"
+    "    return (contstant_term1,exponent),(constant,exponent)\n"
    ]
   },
   {
