--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
     "\n",
     "def find_derivative(function_terms):\n",
     "    constant_term1 = funtion_terms[0][1]*funtion_terms[0][0]\n",
-    "    exonent_term1 = funtion_terms[0][1]-1\n",
+    "    exponent_term1 = funtion_terms[0][1]-1\n",
     "    constant_term2 = funtion_terms[1][1]*funtion_terms[1][0]\n",
     "    exonent_term2 = funtion_terms[1[1]-1\n",
     "    return [(contstant_term1,exponent_term1),(constant_term2,exponent_term2)]\n"
