Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-bc3d48696837>, line 8)",
+     "evalue": "invalid syntax (<ipython-input-32-b1f00feabab6>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-bc3d48696837>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return [(contstant_term1,exponent_term1),(constant_term2,exponent_term2)]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-b1f00feabab6>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return [(constant_term1,exponent_term1),(constant_term2,exponent_term2)]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
     "    exponent_term1 = funtion_terms[0][1]-1\n",
     "    constant_term2 = funtion_terms[1][1]*funtion_terms[1][0]\n",
     "    exponent_term2 = funtion_terms[1[1]-1\n",
-    "    return [(contstant_term1,exponent_term1),(constant_term2,exponent_term2)]\n"
+    "    return [(constant_term1,exponent_term1),(constant_term2,exponent_term2)]\n"
    ]
   },
   {
