Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,8 @@
     "\n",
     "\n",
     "def find_derivative(function_terms):\n",
-    "    constant_term1 = find_derivative[0][1]*funtion_terms[0][0]\n",
-    "    exponent_term1 = funtion_terms[0][1]-1\n",
+    "    constant_term1 = find_derivative[0][1]*find_derivative[0][0]\n",
+    "    exponent_term1 = find_derivative[0][1]-1\n",
     "    constant_term2 = funtion_terms[1][1]*funtion_terms[1][0]\n",
     "    exponent_term2 = funtion_terms[1][1]-1\n",
     "    return [(constant_term1,exponent_term1),(constant_term2,exponent_term2)]\n"
