Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "source": [
     "\n",
     "\n",
-    "def find_derivative(function_terms):\n",
+    "def find_derivative(function_term,function_term):\n",
     "    constant_term1 = find_derivative[0][1]*find_derivative[0][0]\n",
     "    exponent_term1 = find_derivative[0][1]-1\n",
     "    constant_term2 = find_derivative[1][1]*find_derivative[1][0]\n",
