--- a/index.ipynb
+++ b/index.ipynb
@@ -166,8 +166,8 @@
    "source": [
     "\n",
     "\n",
-    "def find_derivative(function_term,function_term):\n",
-    "    constant_term1 = find_derivative[0][1]*find_derivative[0][0]\n",
+    "def find_derivative(function_term1,function_term2):\n",
+    "    constant_term1 = function_term1[0][1]*function_term1[0][0]\n",
     "    exponent_term1 = find_derivative[0][1]-1\n",
     "    constant_term2 = find_derivative[1][1]*find_derivative[1][0]\n",
     "    exponent_term2 = find_derivative[1][1]-1\n",
