Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,9 +168,9 @@
     "\n",
     "def find_derivative(function_term1,function_term2):\n",
     "    constant_term1 = function_term1[0][1]*function_term1[0][0]\n",
-    "    exponent_term1 = find_derivative[0][1]-1\n",
-    "    constant_term2 = find_derivative[1][1]*find_derivative[1][0]\n",
-    "    exponent_term2 = find_derivative[1][1]-1\n",
+    "    exponent_term1 = function_term1[0][1]-1\n",
+    "    constant_term2 = function_term2[1][1]*function_term2[1][0]\n",
+    "    exponent_term2 = function_term2[1][1]-1\n",
     "    return [(constant_term1,exponent_term1),(constant_term2,exponent_term2)]\n"
    ]
   },
